--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
     "passport-jwt": "^4.0.0",
     "validator": "^10.8.0"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.5"
-  }
+  "devDependencies": {}
 }
