--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "krakebackens_biograf",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.4"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
